adjusted "top-top" chevron, added horizontal scrolling for cards on mobile, and fixed hero section on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -4,6 +4,7 @@
 
 body {
   background-color: var(--backgroundPage);
+  overflow-x: hidden;
 }
 
 #content-wrapper {
@@ -38,7 +39,7 @@ body {
 }
 
 #to-top:hover {
- filter: brightness(75%);
+  filter: brightness(75%);
 }
 
 .flex-image-wrapper-center {
@@ -76,7 +77,7 @@ nav {
   width: auto;
   align-items: center;
   justify-content: space-around;
-  width: 90%;
+  width: 60%;
 }
 
 .nav-options a {
@@ -141,23 +142,23 @@ nav {
 }
 
 /* HAMBURGER  */
-.checkbox:checked+label>.lines>.bar1 {
+.checkbox:checked + label > .lines > .bar1 {
   transform: rotate(45deg);
   transform-origin: 5%;
   width: 41px;
 }
 
-.checkbox:checked+label>.lines>.bar2 {
+.checkbox:checked + label > .lines > .bar2 {
   transform: translateX(-40px);
   background-color: transparent;
 }
 
-.checkbox:checked+label>.lines>.bar3 {
+.checkbox:checked + label > .lines > .bar3 {
   transform: translateX(40px);
   background-color: transparent;
 }
 
-.checkbox:checked+label>.lines>.bar4 {
+.checkbox:checked + label > .lines > .bar4 {
   transform-origin: 5%;
   transform: rotate(-45deg);
   width: 41px;
@@ -217,28 +218,18 @@ nav {
 }
 
 #greeting {
-  /* border: 1px solid red; */
-  /* position: relative; */
-  /* line-height: 100%; */
   line-height: clamp(3.75rem, 5.5vw, 6.3rem);
 }
 
-#greeting>span:first-of-type {
-  /* border: 1px solid cyan; */
+#greeting > span:first-of-type {
   position: relative;
-  /* top: 10px; */
-  /* line-height: -100%; */
-  font-size: 5.75rem;
   font-size: clamp(4.25rem, 5vw, 5.75rem);
 }
 
 #greeting span.green-text {
-  /* border: 1px solid greenyellow; */
   position: relative;
-  /* top: -10px; */
-  /* line-height: 0; */
   font-size: 9rem;
-  font-size: clamp(5.25rem, 8vw, 9rem)
+  font-size: clamp(5.25rem, 8vw, 9rem);
 }
 
 /* COMMON SECTION STYLES */
@@ -252,7 +243,7 @@ nav {
   gap: 3vw;
 }
 
-.section-base .flex-image-wrapper>img {
+.section-base .flex-image-wrapper > img {
   height: clamp(380px, 390px, 430px);
 }
 
@@ -269,7 +260,7 @@ nav {
   text-align: right;
 }
 
-.section-right .flex-image-wrapper>img {
+.section-right .flex-image-wrapper > img {
   height: clamp(420px, 450px, 480px);
 }
 
@@ -340,7 +331,7 @@ nav {
   width: 100%;
 }
 
-#start-using>img {
+#start-using > img {
   flex: 0 0 auto;
   width: auto;
   aspect-ratio: 1/1;
@@ -372,7 +363,7 @@ footer .img {
   display: flex;
 }
 
-footer .img>svg {
+footer .img > svg {
   width: 100%;
   margin: auto;
 }
@@ -396,31 +387,31 @@ footer .text .links {
   flex-direction: column;
 }
 
-.directory>p {
+.directory > p {
   margin-bottom: 15px;
   font-weight: bold;
   color: var(--textPrimary);
 }
 
-.directory>ul {
+.directory > ul {
   display: flex;
   flex-direction: column;
   gap: 5px;
   padding-left: 0;
 }
 
-.directory>ul li a {
+.directory > ul li a {
   color: var(--textSecondary);
 }
 
-.directory>a {
+.directory > a {
   display: flex;
   align-items: center;
   justify-content: center;
   max-width: 100%;
 }
 
-.directory>a>img {
+.directory > a > img {
   max-width: 100%;
   height: auto;
   max-height: 50px;
@@ -522,7 +513,6 @@ footer .text .links {
     align-items: center;
     justify-content: center;
     text-align: center;
-    /* border: 1px solid cyan; */
   }
 
   .flex-image-wrapper-right img,
@@ -554,8 +544,44 @@ footer .text .links {
   }
 
   footer .img,
-  footer .img>svg {
+  footer .img > svg {
     display: none;
+  }
+
+  /* Mobile Navigation */
+  nav {
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: start;
+    gap: 30px;
+    position: relative;
+    width: 90%;
+  }
+
+  .hamburger-menu {
+    display: block;
+    margin-top: 35px;
+  }
+
+  .nav-options {
+    display: none;
+    z-index: 10;
+    flex-direction: column;
+    background-color: var(--backgroundContent);
+    width: auto;
+    border-radius: 16px;
+    padding: 25px 20px;
+    gap: 25px;
+    width: auto;
+    transform: translateY(-20px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+  }
+
+  #to-top {
+    bottom: 3vh;
+    right: 3vh;
+    aspect-ratio: 1/1;
+    width: 6vh;
   }
 }
 
@@ -598,62 +624,62 @@ footer .text .links {
     flex-wrap: wrap;
   }
 
-  .section-base, .section-right {
+  .section-base,
+  .section-right {
     text-align: left;
   }
 
-  .section-base+.section-right {
+  .section-base + .section-right {
     flex-wrap: wrap-reverse;
   }
 
-  .section-base>.flex-image-wrapper-left>img[src="/assets/nft.png"] {
+  .section-base > .flex-image-wrapper-left > img[src="/assets/nft.png"] {
     width: 70%;
   }
 
-  /* Mobile Navigation */
   nav {
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: start;
-    gap: 30px;
+    width: 100%;
+  }
+
+  #greeting > span:first-of-type {
     position: relative;
+    font-size: 60%;
   }
 
-  .hamburger-menu {
-    display: block;
-    margin-top: 35px;
+  #greeting span.green-text {
+    position: relative;
+    font-size: 9rem;
+    font-size: 95%;
   }
 
-  .nav-options {
-    display: none;
-    z-index: 10;
-    flex-direction: column;
-    background-color: var(--backgroundContent);
-    width: auto;
-    border-radius: 16px;
-    padding: 25px 20px;
-    gap: 25px;
-    width: auto;
-    transform: translateY(-20px);
-    transition: opacity 0.5s ease, transform 0.5s ease;
+  #landing-section .left {
+    word-wrap: break-word;
+    white-space: normal;
+    max-width: none;
+    width: 90vw;
   }
-}
 
-/* @media (max-width: 1020px) {
+  #landing-section {
+    gap: 5%;
+  }
+
+  #s-the-basics #cards {
+    flex-wrap: nowrap;
+    width: 100vw;
+    overflow-x: auto;
+    justify-content: flex-start;
+  }
+
   #s-the-basics .card {
-    max-width: 30%;
-    min-width: 30%;
+    max-width: 260px;
+    min-width: 250px;
+  }
+
+  #s-the-basics .card:nth-of-type(2) {
+    margin-right: 10vw;
+  }
+
+  .section-2 img {
+    width: 65%;
   }
 }
-
-@media (max-width: 925px) {
-  #content-container {
-    width: 70%;
-  }
-}
-
-@media (max-width: 750px) {
-  #content-container {
-    width: 90%;
-  }
-} */
