--- a/styles/presets.css
+++ b/styles/presets.css
@@ -22,6 +22,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 * {
@@ -32,9 +33,6 @@ html {
   /* Universal font style */
   font-family: Inter, sans-serif;
   color: var(--textPrimary);
-
-  /* for testing only */
-  /* border: 1px solid red; */
 }
 
 /* Main title */
@@ -43,7 +41,7 @@ h1 {
   font-weight: bold;
 }
 
-/*  secondary titles */
+/*  secondary title */
 h2 {
   font-size: 40px;
   font-weight: bold;
@@ -55,7 +53,7 @@ h3 {
   font-weight: 600;
 }
 
-/* Writing in landing part */
+/* Writing in Hero section */
 h4 {
   font-size: 17px;
   font-weight: 500;
@@ -90,7 +88,6 @@ p {
   color: var(--green);
 }
 
-/* remove those damn bullet point */
 ul {
   list-style-type: none;
 }
